Opened 19 years ago

Closed 13 years ago

#532 closed bug (fixed)

[Deskbar] flickers during app launch

Reported by: diver Owned by: leavengood
Priority: normal Milestone: R1
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by nielx)

You could see many flickering if you have "Show application expander" and "Expand new applications" option are enabled and will launch several apps. I will also use much cpu power.

Change History (11)

comment:1 by korli, 19 years ago

bug_group: developers

comment:2 by axeld, 19 years ago

Owner: changed from axeld to jackburton

comment:3 by diver, 19 years ago

I think this could be a bug in Deskbar, as in R5 with OT from cvs it flickers too, but a liitle bit fewer, though.

comment:4 by nielx, 17 years ago

Component: - Applications- Applications/Deskbar
Description: modified (diff)
Platform: All

Move to the proper component.

comment:5 by diver, 16 years ago

Version: R1 development

Still here in hrev32617.

comment:6 by diver, 15 years ago

Version: R1/pre-alpha1R1/Development

comment:7 by diver, 15 years ago

Summary: [Deskbar] much flickering on app launch[Deskbar] flickers during app launch

comment:8 by jackburton, 15 years ago

Owner: changed from jackburton to nobody
Status: newassigned

comment:9 by diver, 15 years ago

Still reproducible in VirtualBox 3.0.12 with hrev38300. It could be related to #484.

comment:10 by leavengood, 13 years ago

Owner: changed from nobody to leavengood
Status: assignedin-progress

comment:11 by leavengood, 13 years ago

Resolution: fixed
Status: in-progressclosed

Should be fixed in hrev44458.

Note: See TracTickets for help on using tickets.