Fix memory leak and an optimization in Deskbar

When resizing Deskbar icons, delete the icon bitmap before rebuilding
it with a new icon, was leaking the bitmap.

For several actions including:
 - Sorting running apps
 - Setting Tracker first
 - Showing/hiding application expander
 - Expanding new applications
 - Resizing icons
 - Hiding and showing application names

It is not necessary to rebuild all of Deskbar, just rebuild the
application bar. Should also help but not complete fix Ticket #532.